extra margin fix

--- a/source/assets/stylesheets/components/_about.scss
+++ b/source/assets/stylesheets/components/_about.scss
@@ -148,3 +148,9 @@
   }
 }
 
+@media (max-width: 400px){
+  .about-points {
+    padding: 0 24px;
+  }
+}
+
